# WebViews

./: .gitignore  CMakeLists.txt  ChatGPTs.icns  README.md  main.cpp  resource.qrc
.github/: qt-android.yml  qt-ios.yml  qt-windows.yml
.github/workflows/: qt-macos.yml  qt-ubuntu.yml  qt-windows.yml
ChatGPTs/: ChatGPTsApp.swift  ChatGPTsCommands.swift  ChatGPTsDetail.swift  ChatGPTsList.swift  ChatGPTsSettings.swift  ModelData.swift  SimpleWebView.swift
ChatGPTs.xcodeproj/: project.pbxproj
ChatGPTs.xcodeproj/xcshareddata/xcschemes/: ChatGPTs.xcscheme
ChatGPTsTests/: ChatGPTsTests.swift
ChatGPTsUITests/: ChatGPTsUITests.swift  ChatGPTsUITestsLaunchTests.swift
assets/: index.html
scripts/: icns.sh
src/: colorscheme.cpp  colorscheme.h  cookiemanager.cpp  cookiemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profilemanager.cpp  profilemanager.h  util.cpp  util.h  util_test.h  webengineview.cpp  webengineview.h
